fix: better padding on small screens by default

--- a/src/main.css
+++ b/src/main.css
@@ -27,8 +27,7 @@ body {font-family: system-ui, sans-serif;}
 }
 
 .site {
-    padding: 1rem;
-    max-width: 90vw;
+    padding: 1rem .5rem;
     margin: 0 auto;
 }
 
@@ -67,7 +66,6 @@ h2 {
     width: clamp(16rem,93vw,75rem);
     max-width: 75ch;
     line-height: 1.5;
-    text-align: center;
     font-size: 1.5rem;
 }
 
